# pypto_workspace

./: .gitignore  .gitmodules  AGENT.md  README.md  debug.sh  run_gdb.sh  test_incre.py  test_incre_attn.py  test_incre_diag.py
.agent/workflows/: dev-test.md  merge-to-main.md
.claude/skills/pypto-issue-creation/: SKILL.md  collect-issue-info.sh
.github/workflows/: ci.yml
docs/pypto_top_level_design_documents/: Gemini_conversation.md  HL_new_feature_Expand_Mixed_Kernel_and_call_spmd.md  HL_ptoisa_newfeature20260306_TPUSH_TPOP.md  gen_mixed_kernel_local_usage.py  linqu_data_system.md  linqu_runtime_design.md  machine_hierarchy_and_function_hierarchy.md  multi_level_runtime_ring_and_pypto_free_api.md  tensor_valid_shape.md
draft/: llm_serving_architecture_analysis.md  rust_llm_server_design.md  rust_llm_server_design_v2.md  rust_llm_server_design_v3.md  rust_llm_server_design_v5.md  rust_llm_server_design_v6.md  rust_llm_server_design_v7.md
kv-cache/: Cargo.toml
kv-cache/src/: block_hash.rs  block_manager.rs  block_pool.rs  kv_manager.rs  lib.rs  npu_memory.rs  radix_tree.rs  types.rs
rustBindings/: ascend_rust_bindings_research.md
rustBindings/aclnn-sys/: Cargo.toml  build.rs
rustBindings/aclnn-sys/src/: activation.rs  attention.rs  common.rs  elementwise.rs  embedding.rs  incre_attention.rs  lib.rs  matmul.rs  paged_attention.rs  permute.rs  reduction.rs  rmsnorm.rs  rope.rs
rustBindings/ascend/: Cargo.toml
rustBindings/ascend/src/: comm.rs  device.rs  error.rs  lib.rs  memory.rs  stream.rs  tensor.rs
rustBindings/ascend/src/ops/: activation.rs  attention.rs  elementwise.rs  embedding.rs  incre_attention.rs  matmul.rs  mod.rs  paged_attention.rs  permute.rs  reduction.rs  rmsnorm.rs  rope.rs
rustBindings/ascend/tests/: integration.rs
rustBindings/ascendcl-sys/: Cargo.toml  build.rs
rustBindings/ascendcl-sys/src/: lib.rs  memory.rs  runtime.rs  types.rs
rustBindings/hccl-sys/: Cargo.toml  build.rs
rustBindings/hccl-sys/src/: lib.rs  types.rs
rust_llm_server/: Cargo.toml  PARAL.md  implementation_plan.md
rust_llm_server/.cargo/: config.toml
rust_llm_server/examples/: hccl_cpp_test.cpp  hccl_smoke_test.rs  run_hccl_cpp_test.sh  run_hccl_smoke_test.sh
rust_llm_server/scripts/: compare_tp_dumps.py  scan_overflow.py
rust_llm_server/src/: main.rs
rust_llm_server/src/distributed/: mod.rs  process_group.rs
rust_llm_server/src/engine/: debug_dump.rs  engine.rs  forward.rs  kv_cache.rs  mod.rs  perf.rs  plan.rs
rust_llm_server/src/model/: config.rs  device_tensor.rs  mod.rs  network.rs  parallel.rs  quantize.rs  scratch_arena.rs  tensor.rs  weights.rs
rust_llm_server/src/ops/: ascend.rs  ascend_comm.rs  mod.rs  stubs.rs
rust_llm_server/src/scheduler/: mod.rs
rust_llm_server/src/server/: mod.rs
scripts/: remote-test.sh  remote_test.sh
tests/: gen_reference.py  reference_inference.py  validate_full.py  validate_layer0.py
