[package]
name = "rust_llm_server"
version = "0.1.0"
edition = "2021"
description = "Rust LLM inference server framework for Qwen3 models"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP server
axum = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Weight loading
safetensors = "0.4"
memmap2 = "0.9"

# FP16 support (for RoPE cos/sin table precomputation)
half = "2"

# Tokenizer (HuggingFace tokenizers for tokenizer.json)
tokenizers = "0.21"

# Ascend NPU backend (optional — requires CANN SDK)
ascend = { path = "../rustBindings/ascend", optional = true }
ascendcl-sys = { path = "../rustBindings/ascendcl-sys", optional = true }
aclnn-sys = { path = "../rustBindings/aclnn-sys", optional = true }
hccl-sys = { path = "../rustBindings/hccl-sys", optional = true }

# KV Cache management (paged attention, prefix caching)
kv-cache = { path = "../kv-cache" }

[features]
default = []
ascend = ["dep:ascend", "dep:ascendcl-sys", "dep:aclnn-sys"]
hccl = ["dep:hccl-sys", "ascend/hccl"]
# Rotating scratch-arena pool depth (see model/scratch_arena.rs).
# Default (no flag) = 4 arenas (safest). Lower = less memory, more risk.
# pool_depth_1 = per-layer sync fallback (identical to old behaviour).
pool_depth_1 = []
pool_depth_2 = []
pool_depth_3 = []
